src/test/ui/issues/issue-3779.stderr
error[E0072]: recursive type `S` has infinite size
  --> $DIR/issue-3779.rs:1:1
   |
LL | struct S {
   | ^^^^^^^^ recursive type has infinite size
LL |
LL |     element: Option<S>
   |     ------------------ recursive without indirection
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `S` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
